design embed rapport d'espionnage gestion locales ajout gestion des dates

--- a/translations/de.json
+++ b/translations/de.json
@@ -1,12 +1,21 @@
 {
+  "localDateFormat": "dd.mm.yyyy - HH:MM:ss",
+  "########": "#########",
+  "activity": "Aktivität",
   "building": "Gebäude",
   "crystal": "Kristall",
   "defence": "Verteidigung",
   "deuterium": "Deuterium",
   "fleets": "Flotten",
+  "fleetsRepair": "Wrackfelder",
   "metal": "Metall",
+  "minutes": "m",
+  "noActivity" : "keine aktivität",
+  "nothing": "Nichts zu zeigen",
+  "openWith": "Öffnen mit",
   "research": "Forschung",
   "ressources": "Versorgung",
+  "spiedBy": "Ausspioniert von",
   "1": "Metallmine",
   "2": "Kristallmine",
   "3": "Deuterium-Synthetisierer",
