--- a/translations/en.json
+++ b/translations/en.json
@@ -1,12 +1,21 @@
 {
+  "localDateFormat": "dd/mm/yyyy - hh:MM:ss tt",
+  "########": "#########",
+  "activity": "Activity",
   "building": "Building",
   "crystal": "Crystal",
   "defence": "Defence",
   "deuterium": "Deuterium",
   "fleets": "fleets",
+  "fleetsRepair": "Wreckages",
   "metal": "Metal",
+  "minutes": "m",
+  "noActivity" : "No activity",
+  "nothing": "Nothing to show",
+  "openWith": "Open with",
   "research": "Research",
   "ressources": "Ressources",
+  "spiedBy": "Spied by",
   "1": "Metal Mine",
   "2": "Crystal Mine",
   "3": "Deuterium Synthesizer",
