--- a/translations/fr.json
+++ b/translations/fr.json
@@ -1,12 +1,21 @@
 {
+  "localDateFormat": "dd/mm/yyyy - HH:MM:ss",
+  "########": "#########",
+  "activity": "Activité",
   "building": "Bâtiment",
   "crystal": "Cristal",
   "defence": "Défense",
   "deuterium": "Deutérium",
   "fleets": "Flottes",
+  "fleetsRepair": "Épaves",
   "metal": "Métal",
+  "minutes": "m",
+  "noActivity" : "Aucune activité",
+  "nothing": "Rien à afficher",
+  "openWith": "Ouvrir avec",
   "research": "Recherche",
   "ressources": "Ressources",
+  "spiedBy": "Espionné par",
   "1": "Mine de métal",
   "2": "Mine de cristal",
   "3": "Synthétiseur de deutérium",
