finalization reports (combat / spy / missile / recycling) handle errors from gf api some translations commentary in code

--- a/translations/de.json
+++ b/translations/de.json
@@ -1,20 +1,41 @@
 {
+  "error4": "API-Schlüsselfehler",
+  "error5": "Fehler beim Abrufen des Berichts (interner Serverfehler)",
+  "error6": "Ungültige Berichts-API",
+  "errorUnknown": "Unbekannter Fehler",
   "localDateFormat": "dd.mm.yyyy - HH:MM:ss",
   "########": "#########",
   "activity": "Aktivität",
-  "building": "Gebäude",
+  "afterFight": "Nach dem kampf",
+  "attackers": "Angreifer",
+  "attackersWin": "Der Angreifer hat den Kampf gewonnen!",
+  "beforeFight": "Vor dem kampf",
+  "buildings": "Gebäude",
   "crystal": "Kristall",
-  "defence": "Verteidigung",
+  "defenders": "Verteidiger",
+  "defendersWin": "Der Verteidiger hat den Kampf gewonnen!",
+  "defense": "Verteidigung",
   "deuterium": "Deuterium",
-  "fleets": "Flotten",
-  "fleetsRepair": "Wrackfelder",
+  "draw": "Der Kampf endet unentschieden.",
+  "looting": "Plündern",
+  "lostUnits": "Verlorene einheit(en)",
+  "ships": "Flotten",
+  "repairOrder": "Wrackfelder",
   "metal": "Metall",
   "minutes": "m",
+  "moonCreated": "Ein mond wurde geschaffen",
   "noActivity" : "keine aktivität",
   "nothing": "Nichts zu zeigen",
+  "otherInformations": "Andere informationen",
   "openWith": "Öffnen mit",
+  "player": "Spieler",
+  "recyclingReport": "Recycling-Bericht",
+  "recycledBy": "Recycelt von",
   "research": "Forschung",
-  "ressources": "Versorgung",
+  "resources": "Versorgung",
+  "resourcesRetrieved": "Ressourcen abgerufen",
+  "resourcesInDebrisField": "Ressourcen im schuttfeld",
+  "rounds": "runde(n)",
   "spiedBy": "Ausspioniert von",
   "1": "Metallmine",
   "2": "Kristallmine",
