--- a/translations/en.json
+++ b/translations/en.json
@@ -1,20 +1,41 @@
 {
+  "error4":"API key error",
+  "error5":"Error on retrieving report (internal server error)",
+  "error6":"Invalid report API",
+  "errorUnknown":"Unknown error",
   "localDateFormat": "dd/mm/yyyy - hh:MM:ss tt",
   "########": "#########",
   "activity": "Activity",
-  "building": "Building",
+  "afterFight": "After the fight",
+  "attackers": "Attacker(s)",
+  "attackersWin": "The attacker has won the battle!",
+  "beforeFight": "Before the fight",
+  "buildings": "Building",
   "crystal": "Crystal",
-  "defence": "Defence",
+  "defenders": "Defender(s)",
+  "defendersWin": "The defender has won the battle!",
+  "defense": "Defence",
   "deuterium": "Deuterium",
-  "fleets": "fleets",
-  "fleetsRepair": "Wreckages",
+  "draw": "The battle ends in a draw.",
+  "looting": "Looting",
+  "lostUnits": "Lost unit(s)",
+  "ships": "Fleets",
+  "repairOrder": "Wreckages",
   "metal": "Metal",
   "minutes": "m",
   "noActivity" : "No activity",
+  "moonCreated": "A moon was created",
   "nothing": "Nothing to show",
+  "otherInformations": "Other informations",
   "openWith": "Open with",
+  "player": "Player",
+  "recyclingReport": "Recycling report",
+  "recycledBy": "Recycled by",
   "research": "Research",
-  "ressources": "Ressources",
+  "resources": "Ressources",
+  "resourcesRetrieved": "Ressources retrieved",
+  "resourcesInDebrisField": "Ressources in the debris field",
+  "rounds": "round(s)",
   "spiedBy": "Spied by",
   "1": "Metal Mine",
   "2": "Crystal Mine",
