--- a/translations/fr.json
+++ b/translations/fr.json
@@ -1,20 +1,41 @@
 {
+  "error4":"Erreur provenant du token API",
+  "error5":"Erreur lors de la récupération du rapport (erreur serveur)",
+  "error6":"API Rapport invalide",
+  "errorUnknown":"Erreur inconnue",
   "localDateFormat": "dd/mm/yyyy - HH:MM:ss",
   "########": "#########",
   "activity": "Activité",
-  "building": "Bâtiment",
+  "afterFight": "Après le comabt",
+  "attackers": "Attaquant(s)",
+  "attackersWin": "L'attaquant a remporté la bataille!",
+  "beforeFight": "Avant le combat",
+  "buildings": "Bâtiment",
   "crystal": "Cristal",
-  "defence": "Défense",
+  "defenders": "Défenseur(s)",
+  "defendersWin": "Le défenseur a remporté la bataille!",
+  "defense": "Défense",
   "deuterium": "Deutérium",
-  "fleets": "Flottes",
-  "fleetsRepair": "Épaves",
+  "draw": "La bataille se termine en match nul.",
+  "looting": "Pillage",
+  "lostUnits": "Unité(s) perdue(s)",
+  "ships": "Flottes",
+  "repairOrder": "Épaves",
   "metal": "Métal",
   "minutes": "m",
+  "moonCreated": "Une lune a été créée",
   "noActivity" : "Aucune activité",
   "nothing": "Rien à afficher",
+  "otherInformations": "Autres informations",
   "openWith": "Ouvrir avec",
+  "player": "Joueur",
+  "recyclingReport": "Rapport de recyclage",
+  "recycledBy": "Recyclé par",
   "research": "Recherche",
-  "ressources": "Ressources",
+  "resources": "Ressources",
+  "resourcesRetrieved": "Ressources récoltées",
+  "resourcesInDebrisField": "Ressources dans le champ de débris",
+  "rounds": "round(s)",
   "spiedBy": "Espionné par",
   "1": "Mine de métal",
   "2": "Mine de cristal",
@@ -62,7 +83,7 @@
   "207": "Vaisseau de bataille",
   "208": "Vaisseau de colonisation",
   "209": "Recycleur",
-  "210": "Sonde d`espionnage",
+  "210": "Sonde d'espionnage",
   "211": "Bombardier",
   "212": "Satellite solaire",
   "213": "Destructeur",
@@ -76,6 +97,6 @@
   "406": "Lanceur de plasma",
   "407": "Petit bouclier",
   "408": "Grand bouclier",
-  "502": "Missile d`interception",
+  "502": "Missile d'interception",
   "503": "Missile interplanétaire"
 }
